@@ -1,5 +1,10 @@
 4.12.1
 
+- Security fixes
+  - Remove unchecked malloc() call in SRFI-4 constructors when
+    allocating in non-GC memory, resulting in potential 1-word
+    buffer overrun and/or segfault (thanks to Lemonboy).
+
 - Core Libraries
   - Unit "posix": If file-lock, file-lock/blocking or file-unlock are
     interrupted by a signal, we now retry (thanks to Joerg Wittenberger).
